2010-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R: fix insert method and scroll to end

2010-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (isStillThere): Change to index=TRUE in svalue. No
	longer specifies chosen column, rather returns index. Implemented
	svalue<- method.
	

	* R/gvarbrowser.R: fixes to this suggested by TT. svalue, 

2010-07-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (isStillThere): fix to add this function for update

2010-07-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (.inClass): put in multiple argument; can
	override stockIconFromClass (see gWidgetsRGtk2 page);

	* R/gtree.R: return NA if no selection

2010-07-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): Added [ method for
	extraction of widget

2010-07-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaGenerics.R: fix to font<- (color was using modifyText, not modifyFg)

2010-07-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R (.setDevNo): added popupmenu to save graphic to
	clipboard and to save to a file.

2010-07-06  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R Added rubber-band selection and the method
	addHandlerChanged to set a callback for when a selection is
	made. See the ggraphics man page for an example

2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R (.setDevNo): fix to issue with plot.new before
	drawing. Took trick from playwith
	(.setDevNo): Put in code to raise graphic device when mouse clicks
	or mouses over. Not sure latter is right. Perhaps focus event is
	more natural?

2010-06-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R: bug fix for gtree when icons not set

2010-06-20  john verzani  <verzani@john-verzanis-macbook-pro.local>
