@@ -5,6 +5,7 @@ Dear Emacs, please make this -*-Text-*- mode!
 Changes for version 0.0-69
 --------------------------
 * use RGtk2Extras now (name change)
+* fix to gradio's [<- method
 
 Changes for version 0.0-68
 --------------------------
