@@ -1,3 +1,11 @@
+2010-08-21  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/ggraphics.R: cleaned up code. Issue with size can be avoided
+	by suppressing drawing of window until after this widget is added.
+
+	* R/gradio.R (as.gWidgetsRGtk2.GtkRadioButton): fix to allow [<-
+	to shorten length
+
 2010-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gtext.R: fix insert method and scroll to end
